chinh vi dien tu

--- a/DATN_F21/src/main/resources/templates/viewsAdmin/Authorization.html
+++ b/DATN_F21/src/main/resources/templates/viewsAdmin/Authorization.html
@@ -6,7 +6,7 @@
 			<div class="container_Store">
 				<div class="row">
 					<div class="col-sm-5"></div>
-					<h2  style="color: orange; margin-top: 20px; font-size: 30px">Quản lý cửa hàng</h2>
+					<h2  style="color: orange; margin-top: 20px; font-size: 30px">Phân quyền</h2>
 				</div>
 				<div class="row">
 					<div class="col-sm-12">
