--- a/DATN_F21/src/main/resources/templates/viewsUser/myAccount/cardlink.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/myAccount/cardlink.html
@@ -3,36 +3,35 @@
 	th:replace="~{/layoutUser/myAccount/index :: dynamic(~{:: main})}">
 <body>
 	<main>	
-	<div class="tab-pane fade active show" ng-controller="topup-ctrl">
-            <div class="ltn__myaccount-tab-content-inner">
-                <p>Bạn cần xác thực thông tin trước khi nạp tiền.</p>
+	<div class="tab-pane fade active show" ng-app="user-app" ng-controller="cardlink-ctrl">
+            <div class="ltn__myaccount-tab-content-inner">           
                 <div class="ltn__form-box">
-                    <h4>Thông tin thẻ</h4>
-                    <form name="form_topup">
+                    <h4>Liên kết thẻ</h4>
+                    <form name="form_wallet">
                         <div class="row mb-50">
                         	<div class="col-md-12">
                                 <label>Số thẻ:</label>
-                                <span style="color: red;" ng-hide="form_topup.txtCardnumber.$valid">Không được để trống và phải là số</span>
-                                <input class="gender" ng-model="form.cardnumber" type="number" name="txtCardnumber" required>
+                                <span style="color: red;" ng-hide="form_wallet.txtCardnumber.$valid">Không được để trống và phải là số</span>
+                                <input class="gender" ng-model="form.cardnumber" type="text" name="txtCardnumber" required>
                             </div> 
                             <div class="col-md-12">
                                 <label>Họ tên trên thẻ:</label>
-                                <span style="color: red;" ng-hide="form_topup.txtHoldername.$valid">Không được để trống</span>
+                                <span style="color: red;" ng-hide="form_wallet.txtHoldername.$valid">Không được để trống</span>
                                 <input ng-model="form.holdername" type="text" name="txtHoldername" required>
                             </div>
                             <div class="col-md-12">
                                 <label>Ngày hết hạn:</label>
-                                <span style="color: red;" ng-hide="form_topup.dateCardwxpiry.$valid">Bạn chưa chọn ngày hết hạn</span>
+                                <span style="color: red;" ng-hide="form_wallet.dateCardwxpiry.$valid">Bạn chưa chọn ngày hết hạn</span>
                                 <input ng-model="form.cardexpiry" type="date" name="dateCardwxpiry" required>
                             </div>
                             <div class="col-md-12">
                                 <label>Mã CVV:</label>
-                                <span style="color: red;" ng-hide="form_topup.txtCvv.$valid">Không được để trống</span>
+                                <span style="color: red;" ng-hide="form_wallet.txtCvv.$valid">Không được để trống</span>
                                 <input ng-model="form.cvv" type="password" name="txtCvv" required>
                             </div>
                             <div class="col-md-12">
                             	<label>Chọn loại thẻ:</label>  
-                            	<span style="color: red;" ng-hide="form_topup.brank.$valid">Bạn chưa chọn</span>
+                            	<span style="color: red;" ng-hide="form_wallet.brank.$valid">Bạn chưa chọn</span>
                                 <div class="row">                  
                                      <div class="col-md-3" ng-repeat="cb in cardbrand">
                                      	<input ng-model="form.cardbrand" type="radio" ng-value="cb.id" name="brank" required> <label>{{cb.name}}</label>
@@ -40,9 +39,10 @@
                                  </div>
                             </div>             
                         <div class="btn-wrapper" style="float:right;">
-                            <button ng-disabled="!form_topup.$valid" ng-click="contineu_money()" type="submit" class="btn theme-btn-1 btn-effect-1 text-uppercase">Tiếp theo</button>
+                            <button ng-disabled="!form_wallet.$valid" ng-click="save()" type="submit" class="btn theme-btn-1 btn-effect-1 text-uppercase">Lưu</button>
                         </div>
                     </form>
+
                 </div>
             </div>
         </div>
