--- a/DATN_F21/src/main/resources/templates/viewsAdmin/Category.html
+++ b/DATN_F21/src/main/resources/templates/viewsAdmin/Category.html
@@ -64,8 +64,8 @@
                             <label for="">ID loại</label>
                             <input ng-model="form.id" type="text" class="form-control" readonly>
                             <label for="">Tên loại</label>
-                            <input ng-model="form.name" name="txtName" type="text" class="form-control">
-                            <span style="color: red;" ng-hide="form_category.txtName.$valid">Không được để trống tên loại sản phẩm</br></span>
+                            <input ng-model="form.name" name="txtName" type="text" class="form-control" required>
+                            <span style="color: red;" ng-hide="from_category.txtName.$valid">Không được để trống tên loại sản phẩm</br></span>
                             <label for="">Trạng thái</label> <br>
                             <input ng-model="form.status" type="radio" checked class="radioCate" name="Category" ng-value="true"><label
                                 class="namecategory">Kích hoạt</label>
