--- a/DATN_F21/src/main/resources/templates/viewsAdmin/ListUser.html
+++ b/DATN_F21/src/main/resources/templates/viewsAdmin/ListUser.html
@@ -86,7 +86,7 @@
 								</div>
 							</div>
 							<div class="btna row">
-								<button class="btn1" type="submit">Thêm</button>
+								<button ng-click="create()" class="btn1" type="submit">Thêm</button>
 								<button ng-click="update()" class="btn2" type="submit">Cập Nhật</button>
 								<button ng-click="clear()" class="btn2" type="submit">Làm Mới</button>
 							</div>
