--- a/DATN_F21/src/main/resources/templates/viewsUser/regisSeller.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/regisSeller.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org"
 	th:replace="~{/layoutUser/index :: dynamic(~{:: main})}">
 <body>
-	<main>
+	<main ng-controller="buyer-ctrl">
 		<!-- REGISTER AREA START -->
     <div class="ltn__login-area pb-65 mt-40">
         <div class="container">
