--- a/DATN_F21/src/main/resources/static/css/seller.css
+++ b/DATN_F21/src/main/resources/static/css/seller.css
@@ -358,81 +358,6 @@
 }
 
 /* chi tiet */
-
-.side-bar2 .container_cthd
-{
-  margin: 10px;
-  max-width: 900px;
-}
-
-.side-bar2 .container_cthd label
-{
-  margin-left: 10px;
-}
-
-.side-bar2 .container_cthd h3
-{
+#title2 h3{
   text-align: center;
-  color: orange;
-}
-
-.side-bar2 .container_cthd .cthd
-{
-	margin-left: 20px;
-}
-
-.side-bar2 .container_cthd .diachi
-{
-  width: 100%;
-}
-
-.side-bar2 .container_cthd .thongtin
-{
-  font-size: 35px;
-}
-
-.side-bar2 .container_cthd .diachi textarea
-{
-  width: 100%;
-  height: 100px;
-  border: 1px solid #aaa;
-  border-radius: 4px;
-  margin: 8px 0;
-  outline: none;
-  padding: 8px;
-  box-sizing: border-box;
-  transition: .3s;
-}
-
-.side-bar2 .container_cthd .diachi textarea:focus
-{
-  border-color: dodgerblue;
-  box-shadow: 0 0 8px 0 dodgerblue;
-}
-
-.side-bar2 .container_cthd .cthd .row .inputorder
-{
-  width: 100%;
-  height: 40px;
-  border: 1px solid #aaa;
-  border-radius: 4px;
-  margin: 8px 0;
-  outline: none;
-  padding: 8px;
-  box-sizing: border-box;
-  transition: .3s;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
-.side-bar2 .container_cthd .cthd .row .inputorder:focus
-{
-  border-color: dodgerblue;
-  box-shadow: 0 0 8px 0 dodgerblue;
-}
-
-.side-bar2 .container_cthd .tablecthd label
-{
-  margin-top: 20px;
-  font-size: 35px;
 }
