--- a/DATN_F21/src/main/resources/templates/viewsSeller/detail.html
+++ b/DATN_F21/src/main/resources/templates/viewsSeller/detail.html
@@ -3,50 +3,43 @@
 	th:replace="~{/layoutSeller/index :: dynamic(~{:: main})}">
 <body>
 <main>
-		<div class="container_cthd">
-            <h3>Thông Tin Đơn Hàng</h3>
+		<div class="container_cthd" id="title2" style="margin: 8px;">
+            <h3 style="color: orange;">Thông Tin Đơn Hàng</h3>
         <div class="cthd">
             <div class="row">
                 <div class="col-sm-4">
-                    <label for="">Id đơn</label>
-                    <input type="text" readonly class="inputorder" value="1">
+                    <label for=""> <b>Id đơn: </b>21</label>
+                    
                 </div>
                 <div class="col-sm-4">
-                    <label for="">Cửa Hàng</label>
-                    <input type="text" readonly class="inputorder" value="2">
+                    <label for=""><b>Cửa Hàng: </b>Rau Sạch Việt</label>
                 </div>
                 <div class="col-sm-4">
-                    <label for="">Ngày đặt</label>
-                    <input type="text" readonly class="inputorder" value="19/10/2021">
+                    <label for=""><b>Ngày đặt: </b>11/12/2021</label>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-4">
-                    <label for="">Khách hàng</label>
-                    <input type="text" readonly class="inputorder" value="kgajsys12">
+                    <label for=""><b>Khách hàng: </b>Trần Minh A</label>
                 </div>
                 <div class="col-sm-4">
-                    <label for="">Trạng thái</label>
-                    <input type="text" readonly class="inputorder" value="đã giao">
+                    <label for=""><b>Trạng thái: </b>đang chờ xác nhận</label>
                 </div>
                 <div class="col-sm-4">
-                    <label for="">Tổng đơn</label>
-                    <input type="text" readonly class="inputorder" value="123.000đ">
+                    <label for=""><b>Tổng đơn: </b>125,000.00 đ</label>
+                    
                 </div>
             </div>
             <div class="diachi">
-                <label for="">Địa chỉ</label>
-                <textarea readonly name="" id="">
-                    Họ tên: Nguyễn Thành
-                    Số điện thoại :0989000432
-                    Địa chỉ: số 288, Nguyễn Văn Linh, Phường An Khánh, Quận Ninh Kiều, Thành Phố Cần Thơ</textarea>
+                <label for=""><b>Địa chỉ nhận: </b><b>Tên người nhận: </b> Trần Thùy Chi, <b>Số điện thoại: </b>0789587784, <b>Địa chỉ:</b>Thành sơn, Thành Trung, Bình Tân, Vĩnh Long</label>
             </div>
         </div>
+        <h3 style="color: orange;">Chi tiết</h3>
         <div class="tablecthd">
             <table class="table">
                 <thead class="thead-light">
                   <tr>
-                    <th scope="col">STT</th>
+                    <th scope="col"></th>
                     <th scope="col">Đơn giá</th>
                     <th scope="col">Số lượng</th>
                     <th scope="col">Sản phẩm</th>
@@ -56,12 +49,28 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <th scope="row">1</th>
-                    <td>32.000</td>
-                    <td>2</td>
-                    <td>212</td>
-                    <td>1</td>
-                    <td>64.000</td>
+                    <th scope="row"><img th:src="@{|/img/product/15.png|}" width="70px" height="70px" class="rounded-circle" alt="{{detail.product.images}}"></th>
+                    <td >32,000 đ</td>
+                    <td >2</td>
+                    <td >Cải xanh </td>
+                    <td >21</td>
+                    <td >64,000 đ</td>
+                  </tr>
+                  <tr>
+                    <th scope="row"><img th:src="@{|/img/product/14.png|}" width="70px" height="70px" class="rounded-circle" alt="{{detail.product.images}}"></th>
+                    <td >20,000 đ</td>
+                    <td >2</td>
+                    <td >Củ hành tím </td>
+                    <td >21</td>
+                    <td >40,000 đ</td>
+                  </tr>
+                  <tr>
+                    <th scope="row"><img th:src="@{|/img/product/13.png|}" width="70px" height="70px" class="rounded-circle" alt="{{detail.product.images}}"></th>
+                    <td >32.000</td>
+                    <td >1</td>
+                    <td >Chanh dây </td>
+                    <td >21</td>
+                    <td >32,000 đ</td> 
                   </tr>
                 </tbody>
               </table>
