--- a/DATN_F21/src/main/resources/templates/LayoutUser/_menu.html
+++ b/DATN_F21/src/main/resources/templates/LayoutUser/_menu.html
@@ -1,87 +1,92 @@
 <div xmlns:th="http://www.thymeleaf.org">
-	<!-- HEADER AREA START (header-5) -->
-	<header
-		class="ltn__header-area ltn__header-5 ltn__header-transparent gradient-color-4---" ng-controller="buyer-ctrl">
+    <!-- HEADER AREA START (header-5) -->
+    <header class="ltn__header-area ltn__header-5 ltn__header-transparent gradient-color-4---" ng-controller="buyer-ctrl">
 
-		<!-- ltn__header-middle-area start -->
-		<div
-			class="ltn__header-middle-area ltn__header-sticky ltn__sticky-bg-white sticky-active-into-mobile--- plr--9---"
-			style="background-color: #58ed58;">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-4">
-                        <div class="ltn__main-menu" style="margin-top: -50px;">
+        <!-- ltn__header-middle-area start -->
+        <div class="ltn__header-middle-area ltn__header-sticky ltn__sticky-bg-white sticky-active-into-mobile--- plr--9---" style="background-color: #58ed58;">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="ltn__main-menu">
                             <ul>
-                                <li class="menu-icon"><a href="/formAd">Admin</a></li>  
-								<!-- th:if="${#request.isUserInRole('DIRE') or #request.isUserInRole('STAF')}" -->
-                                <li ><a href="/regisSeller">Seller</a></li>
-								<li th:if="${#request.remoteUser}"><a href="" style="color: white;"><i class="icon-user"></i> [[${#request.remoteUser}]]</a></li>
-                            	<li th:if="${#request.remoteUser}"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bell" viewBox="0 0 16 16">
-									<path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zM8 1.918l-.797.161A4.002 4.002 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 0 0-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5.002 5.002 0 0 1 13 6c0 .88.32 4.2 1.22 6z"/>
-								  </svg></a>
-									<ul>
-										<li ng-repeat="item in notification">
-											<img src="" alt="">
-											Đơn hàng: {{item.order.address.fullname}} 
-											<div ng-if="item.status == 1">
-												Trạng thái:đang chờ xác nhận
-											</div>
-											<div ng-if="item.status == 2">
-												Trạng thái: đã xác nhận
-											</div>
-											<div ng-if="item.status == 3">
-												Trạng thái: đã giao 
-											</div>
-											<div ng-if="item.status == 4">
-												Trạng thái: đã hủy
-											</div>
-											{{item.dates | date:'yyyy-MM-dd HH:mm:ss '}}</li>
-									</ul>
-								</li>
+                                <li><a href="/formAd">Admin</a></li>
+                                <!-- th:if="${#request.isUserInRole('DIRE') or #request.isUserInRole('STAF')}" -->
+                                <li><a href="/regisSeller">Seller</a></li>
+                                <li th:if="${#request.remoteUser}">
+                                    <a href="" style="color: white;"><i class="icon-user"></i> [[${#request.remoteUser}]]</a>
+                                    <li>
+                                        <a th:if="${#request.remoteUser}" href="#">
+                                            <div class="bell-noti">
+                                                <i class="fa fa-bell bell-noti-icon" style="color: white; width: 30px; height: 25px"></i>
+                                                <div class="bell-noti-status"></div>
+                                            </div>
+                                        </a>
+                                        <ul>
+                                            <li ng-repeat="item in notification">
+                                                <img alt=""> Đơn hàng: {{item.order.address.fullname}}
+                                                <div ng-if="item.status == 1">
+                                                    Trạng thái:đang chờ xác nhận
+                                                </div>
+                                                <div ng-if="item.status == 2">
+                                                    Trạng thái: đã xác nhận
+                                                </div>
+                                                <div ng-if="item.status == 3">
+                                                    Trạng thái: đã giao
+                                                </div>
+                                                <div ng-if="item.status == 4">
+                                                    Trạng thái: đã hủy
+                                                </div>
+                                                {{item.dates | date:'yyyy-MM-dd HH:mm:ss '}}</li>
+                                        </ul>
+                                    </li>
+                                </li>
                             </ul>
                         </div>
-						<div class="site-logo-wrap">
-							<div class="site-logo">
-								<a href="/index"><img th:src="@{|/img/logo4.png|}"
-									alt="Logo" height="85px;" width="120%"  style="margin-left: -30px;"></a>
-							</div>
-						</div>
-					</div>
-					<div class="col">
-						<form id="#" method="get" action="/search" class="mt-30">
-							<input class="input-find" type="text" name="name" style="border-radius: 5px;"
-								required="required" placeholder="Tìm kiếm sản phẩm...">
-							<button class="theme-btn-1 btn-find" type="submit" style="border-radius: 5px;">
+                        <div class="site-logo-wrap">
+                            <div class="site-logo">
+                                <a href="/index"><img th:src="@{|/img/logo4.png|}" alt="Logo" height="85px;" width="120%" style="margin-left: -30px;"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <form id="#" method="get" action="/search" class="mt-30">
+                            <input class="input-find" type="text" name="name" style="border-radius: 5px;" required="required" placeholder="Tìm kiếm sản phẩm...">
+                            <button class="theme-btn-1 btn-find" type="submit" style="border-radius: 5px;">
 								<i class="icon-search"></i>
 							</button>
-						</form>
-					</div>
-					<div class="ltn__header-options ltn__header-options-2">
-						<div class="ltn__drop-menu user-menu">
-							<ul>
-								<li><a  style="border-radius: 5px;" href="#"><i class="icon-user"></i></a>
-									<ul>
-										<li th:if="${#request.remoteUser == null}"><a href="/security/login/form">Đăng nhập</a></li>
-										<li th:if="${#request.remoteUser == null}"><a href="/register">Đăng ký</a></li>
-										<li th:if="${#request.remoteUser}"><a href="/account/information">Tài khoản</a></li>
-									</ul></li>
-							</ul>
-						</div>
-						<!-- mini-cart -->
-						<div class="mini-cart-icon">
-							<a  style="border-radius: 5px;" th:href="@{|/index/cart|}"> <i class="icon-shopping-cart"></i>
-								<sup>{{cart.count}}</sup> 
-							</a>
-						</div>
-						<!-- mini-cart -->
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- ltn__header-middle-area end -->
-	</header>
-	<!-- HEADER AREA END -->
+                        </form>
 
-	<div style="padding-top: 120px; padding-bottom: 55px;"></div>
+                    </div>
+                    <div class="ltn__header-options ltn__header-options-2">
+                        <div class="ltn__drop-menu user-menu">
+                            <ul>
+                                <li><a style="border-radius: 5px;" href="#"><i class="icon-user"></i></a>
+                                    <ul>
+                                        <li th:if="${#request.remoteUser == null}"><a href="/security/login/form">Đăng nhập</a></li>
+                                        <li th:if="${#request.remoteUser == null}"><a href="/register">Đăng ký</a></li>
+                                        <li th:if="${#request.remoteUser == null}"><a href="/forgot_password">Quên mật khẩu</a></li>
+
+                                        <li th:if="${#request.remoteUser}"><a href="/account/information">Tài khoản</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- mini-cart -->
+                        <div class="mini-cart-icon">
+                            <a style="border-radius: 5px;" th:href="@{|/index/cart|}"> <i class="icon-shopping-cart"></i>
+                                <sup>{{cart.count}}</sup>
+                            </a>
+                        </div>
+
+                        <!-- mini-cart -->
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- ltn__header-middle-area end -->
+    </header>
+    <!-- HEADER AREA END -->
+
+    <div style="padding-top: 120px; padding-bottom: 55px;"></div>
 
 </div>
