--- a/DATN_F21/src/main/resources/templates/viewsSeller/createProduct.html
+++ b/DATN_F21/src/main/resources/templates/viewsSeller/createProduct.html
@@ -10,14 +10,12 @@
             </div>
         </div>
         <div class="main-body">
-            <div class="card">
+            <div class="card text-center" style="width: 95%; margin: 0 auto;">
                 <div class="card-header bg-light">
                     <div class="simple-search">
                         <input ng-model="form.nameProduct" name="product" id="product" type="text" placeholder="Tên sản phẩm..." />
-                        <button ng-click="find()"><i class="bi bi-search"></i></button>
-                    </div>
-                    <div class="button" style="text-align: center;">
-                        <button type="submit" class="btn btn-success" id="resetImg" ng-click="reset()">Reset</button>
+                        <button ng-click="find()" class="btn"><i class="bi bi-search"></i></button>
+                        <button type="submit" class="btn" id="resetImg" ng-click="reset()">Reset</button>
                     </div>
                 </div>
             </div>
@@ -89,14 +87,14 @@
                             </div>
                             <div class="row align-items-end" id="datatable1">
                                 <!-- <div class="card"> -->
-                                    <div class="form-group" style="text-align: center; float: right;">
-                                        <button type="button" id="updateImg" class="btn btn-primary" ng-click="updateImg()">Cập nhật</button>
-                                        <button type="button" id="deleteImg" class="btn btn-danger " ng-click="deleteImg()">Xóa</button>
-                                    </div>
+                                <div class="form-group" style="text-align: center; float: right;">
+                                    <button type="button" id="updateImg" class="btn btn-primary" ng-click="updateImg()">Cập nhật</button>
+                                    <button type="button" id="deleteImg" class="btn btn-danger " ng-click="deleteImg()">Xóa</button>
+                                </div>
                                 <!-- </div> -->
-                               
+
                                 <div class="input-file">
-                                    
+
                                     <img ng-src="{{'/assets/images/' + image.picture}}" alt="" style="width: 219px; height: 230px; "><br>
                                     <input type="file" name="file" id="file" onchange="angular.element(this).scope().imageChanged(this.files)" />
                                     <br> click vào ô vuông để chọn hình
@@ -106,17 +104,16 @@
                                     <!-- <img src="/assets/images/cloud-up.png" width="189px" height="180" alt=""> -->
                                     </label>
                                     <div class="row">
-                                        <div class="card">
+                                        <div class="card bg-light">
                                             <div class="col-12">
                                                 <img ng-repeat="img in images" ng-src="{{'/assets/images/' + img.picture}}" ng-click="editImages(img)" width="60" height="50">
-                                                
                                             </div>
                                             <!-- <div class="col-4">
                                                       
                                                  
                                             </div> -->
                                         </div>
-                                        
+
                                     </div>
                                 </div>
                                 <!-- <div class="form-group">
@@ -175,6 +172,8 @@
         </div>
         <div id="styleSelector "></div>
     </main>
+
+
 </body>
 
 </html>
