--- a/DATN_F21/src/main/resources/templates/viewsUser/product-detail.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/product-detail.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" th:replace="~{/layoutUser/index :: dynamic(~{:: main})}">
 
-<body >
-    <main  ng-controller="buyer-ctrl" th:object="${item}">
+<body>
+    <main ng-controller="buyer-ctrl" th:object="${item}">
         <!-- BREADCRUMB AREA START -->
         <div class="ltn__breadcrumb-area ltn__breadcrumb-area-2 ltn__breadcrumb-color-white bg-overlay-theme-black-90 bg-image" data-bg="/img/bg/9.jpg">
             <div class="container">
@@ -54,7 +54,7 @@
                                     <div class="modal-product-info shop-details-info pl-0">
                                         <h2 th:text="*{name}"></h2>
                                         <div class="product-price">
-                                           <span th:text = "*{#numbers.formatDecimal(price, 0, 'COMMA', 0, 'POINT')}"></span> VNĐ
+                                            <span th:text="*{#numbers.formatDecimal(price, 0, 'COMMA', 0, 'POINT')}"></span> VNĐ
                                         </div>
                                         <div class="ltn__product-details-menu-2">
                                             <ul>
@@ -77,8 +77,8 @@
                                                 <div class="tab-pane fade active show" id="liton_tab_details_1_1">
                                                     <div class="ltn__shop-details-tab-content-inner">
                                                         <h4 class="title-2" th:text="*{description}">Rau, củ, quả, trái cây và những lợi ích</h4>
-                                                        <p>Rau, củ, quả, trái cây rất có lợi cho sức khỏe vì trong nó chứa nhiều chất dinh dưỡng, chất xơ và các vitamin nên nó sẽ giúp bạn khỏe mạnh cả về thể chất lẫn tinh thần, giảm nguy cơ mắc bệnh tật. Ngoài ra nó còn 1 số lợi ích khác như: Tránh ung
-                                                            thư, Ngăn chặn các bệnh mãn tính, Tăng cường trí não, Giảm cân, Làm đẹp da, Tăng cường miễn dịch..v..v..</p>
+                                                        <p>Rau, củ, quả, trái cây rất có lợi cho sức khỏe vì trong nó chứa nhiều chất dinh dưỡng, chất xơ và các vitamin nên nó sẽ giúp bạn khỏe mạnh cả về thể chất lẫn tinh thần, giảm nguy cơ mắc bệnh tật.
+                                                            Ngoài ra nó còn 1 số lợi ích khác như: Tránh ung thư, Ngăn chặn các bệnh mãn tính, Tăng cường trí não, Giảm cân, Làm đẹp da, Tăng cường miễn dịch..v..v..</p>
                                                         <p>Bạn có thể an tâm mua rau, củ, quả hay trái cây tại shop chúng tôi để đảm bảo sức khỏe...</p>
                                                     </div>
                                                 </div>
@@ -139,9 +139,6 @@
                                             <a href="/index/cart" title="Add to Cart" data-toggle="modal" data-target="#add_to_cart_modal"> <i class="fas fa-shopping-cart"></i>
                                             </a>
                                         </li>
-                                        <li>
-                                            <a href="#" title="Wishlist" data-toggle="modal" data-target="#liton_wishlist_modal"> <i class="far fa-heart"></i></a>
-                                        </li>
                                     </ul>
                                 </div>
                             </div>
@@ -154,7 +151,7 @@
                                     <a th:href="@{|/index/product-detail/${sp.id}|}">[(${sp.name})]</a>
                                 </h2>
                                 <div class="product-price">
-                                <span th:text = "${#numbers.formatDecimal(sp.price, 0, 'COMMA', 0, 'POINT')}"></span> VNĐ
+                                    <span th:text="${#numbers.formatDecimal(sp.price, 0, 'COMMA', 0, 'POINT')}"></span> VNĐ
                                 </div>
                             </div>
                         </div>
