--- a/DATN_F21/src/main/resources/templates/viewsUser/regisSeller.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/regisSeller.html
@@ -16,10 +16,10 @@
                     <div class="account-login-inner">
                         <h1 class="section-title text-center">Đăng ký <br>Cửa Hàng Của Bạn</h1> 
                         <form class="ltn__form-box contact-form-box">                           
-                            <input type="text" ng-model="form.name" placeholder="TÃªn cá»­a hÃ ng*">
-                            <input type="text" ng-model="form.description" placeholder="MÃ´ táº£*">
+                            <input type="text" ng-model="form.name" placeholder="Tên cửa hàng">
+                            <input type="text" ng-model="form.description" placeholder="Mô tả">
                             <div class="btn-wrapper">
-                                <button class="theme-btn-1 btn reverse-color" ng-click="regisSeller()">Táº O Cá»¬A HÃ€NG</button>
+                                <button class="theme-btn-1 btn reverse-color" ng-click="regisSeller()">Tạo cửa hàng</button>
                             </div>
                         </form>
                     </div>
