--- a/DATN_F21/src/main/resources/templates/viewsSeller/allProduct.html
+++ b/DATN_F21/src/main/resources/templates/viewsSeller/allProduct.html
@@ -107,6 +107,7 @@
                             <th scope="col">Loại sản phẩm</th>
                             <th scope="col">Giá</th>
                             <th scope="col">Trạng thái</th>
+                            <th scope="col">Số hình ảnh</th>
                             <th scope="col">Ngày tạo</th>
                             <th scope="col">Hình ảnh</th>
                             <th scope="col">Chỉnh sửa</th>
@@ -114,11 +115,12 @@
                     </thead>
                     <tbody ng-repeat="item in pager.items">
                         <tr>
-                            <input type="hidden" id="idp" ng-value="item.id" ng-model="item.id" /> {{item.id}}
+                            <!-- <input type="hidden" id="idp" ng-value="item.id" ng-model="item.id" /> {{item.id}} -->
                             <td scope="row"><label>{{item.name}}</label></td>
                             <td scope="row"><label>{{item.category.name}}</label></td>
                             <td scope="row"><label>{{item.price}} VNĐ</label></td>
                             <td scope="row"><label>{{item.status ? 'Còn hàng' : 'Hết hàng'}}</label></td>
+                            <td scope="row"><label>{{item.quanlity}}</label></td>
                             <td scope="row"><label>{{item.createdate | date: 'dd-MM-yyyy'}}</label></td>
                             <th scope="row" style="text-align: center;"><img ng-src="{{'/assets/images/' + item.images}}" width="30" height="25"></th>
                             <td>
@@ -151,63 +153,6 @@
         <div>
             <div class="main-body">
                 <div class="page-wrapper">
-                    <!-- Page-header start -->
-                    <div class="page-header card" style="text-align: center;">
-                        <div class="card">
-                            <div class="line-text">
-                                <h3>
-                                    <span style="background-color: #F0F8FF;"> 
-                                        Hình ảnh sản phẩm
-                                    </span>
-                                </h3>
-                            </div>
-                        </div>
-                        <!-- <div class="row align-items-end">
-                            <div class="input-file">
-                                <img ng-src="{{'/assets/images/' + form.images}}" alt="" style="width: 219px; height: 230px;">
-                                <br>
-                                <input type="file" name="file" id="file" onchange="angular.element(this).scope().imageChanged(this.files) " />
-                                <br> click vào ô vuông để chọn hình
-                                <p>Dụng lượng file tối đa 1 MB. Định dạng:.JPEG, .PNG | </p>
-                                <br>
-                                <label for="file" class="input-label">
-                                </label>
-                            </div>
-                            <div class="form-group">
-                                <label style="color: #2029a1">Hãy chọn cho sản phẩm của bạn một bức hình tuyệt nhất<br> nếu không chọn, sản phẩm sẽ có hình ảnh mặc định của hệ thống</label>
-                            </div>
-                        </div> -->
-
-                        <!-- <div class="row align-items-end" id="datatable1"> -->
-                        <div class="row align-items-end">
-
-                            <div class="form-group" style="text-align: center; float: right;">
-                                <button type="button" id="updateImg" class="btn btn-primary" ng-click="updateImg()">Cập nhật</button>
-                                <button type="button" id="deleteImg" class="btn btn-danger " ng-click="deleteImg()">Xóa</button>
-                            </div>
-                            <div class="input-file" style="width: 100%; height: 100%;">
-                                <img ng-src="{{'/assets/images/' + image.picture}}" alt="" style="width: 219px; height: 230px; "><br>
-                                <input type="file" name="file" id="file" onchange="angular.element(this).scope().imageChanged(this.files)" />
-                                <br> click vào ô vuông để chọn hình
-                                <p>Dụng lượng file tối đa 1 MB. Định dạng:.JPEG, .PNG </p>
-                                <br>
-                                <label for="file" class="input-label">
-                                    </label>
-                            </div>
-                            <div class="row">
-                                <div class="card bg-light">
-                                    <div class="col-12">
-                                        <img ng-repeat="img in images" ng-src="{{'/assets/images/' + img.picture}}" ng-click="editImages(img)" width="60" height="50">
-                                    </div>
-                                </div>
-                            </div>
-                            <br>
-                        </div>
-
-
-                    </div>
-
-
                     <!-- Page-header end -->
                     <div class="page-body">
                         <div class="row">
@@ -263,15 +208,6 @@
 							</select>
                                             </div>
                                         </div>
-
-                                        <!-- <div class="form-group row">
-                                            <label class="col-sm-3 col-form-label">Create Date</label>
-                                            <div class="col-sm-9">
-                                                <input type="date" name="createdate" ng-required="true" ng-model="form.createdate" class="form-control">
-                                                <span class="error" ng-show="qlsp.createdate.$error.required">Không bỏ trống ngày tạo sản phẩm</span>
-                                            </div>
-                                        </div> -->
-
                                         <div class="form-group row">
                                             <label class="col-sm-3 col-form-label ">Mô tả</label>
                                             <div class="col-sm-9 ">
@@ -288,6 +224,59 @@
                                 </form>
                             </div>
                             <!-- EXTRA AREA CHART Ends -->
+                        </div>
+                    </div>
+                     <!-- Page-header start -->
+                    <div class="page-header card" style="text-align: center;">
+                        <div class="card">
+                            <div class="line-text">
+                                <h3>
+                                    <span style="background-color: #F0F8FF;"> 
+                                        Hình ảnh sản phẩm
+                                    </span>
+                                </h3>
+                            </div>
+                        </div>
+                        <!-- <div class="row align-items-end">
+                            <div class="input-file">
+                                <img ng-src="{{'/assets/images/' + form.images}}" alt="" style="width: 219px; height: 230px;">
+                                <br>
+                                <input type="file" name="file" id="file" onchange="angular.element(this).scope().imageChanged(this.files) " />
+                                <br> click vào ô vuông để chọn hình
+                                <p>Dụng lượng file tối đa 1 MB. Định dạng:.JPEG, .PNG | </p>
+                                <br>
+                                <label for="file" class="input-label">
+                                </label>
+                            </div>
+                            <div class="form-group">
+                                <label style="color: #2029a1">Hãy chọn cho sản phẩm của bạn một bức hình tuyệt nhất<br> nếu không chọn, sản phẩm sẽ có hình ảnh mặc định của hệ thống</label>
+                            </div>
+                        </div> -->
+
+                        <!-- <div class="row align-items-end" id="datatable1"> -->
+                        <div class="row align-items-end">
+
+                            <div class="form-group" style="text-align: center; float: right;">
+                                <button type="button" id="updateImg" class="btn btn-primary" ng-click="updateImg()">Cập nhật</button>
+                                <button type="button" id="deleteImg" class="btn btn-danger " ng-click="deleteImg()">Xóa</button>
+                            </div>
+                            <div class="input-file" style="width: 100%; height: 100%;">
+                                <img ng-src="{{'/assets/images/' + image.picture}}" alt="" style="width: 219px; height: 230px; "><br>
+                                <input type="file" name="file" id="file" onchange="angular.element(this).scope().imageChanged(this.files)" />
+                                <br> click vào ô vuông để chọn hình
+                                <p>Dụng lượng file tối đa 1 MB. Định dạng:.JPEG, .PNG </p>
+                                <br>
+                                <label for="file" class="input-label">
+                                    </label>
+                            </div>
+                            <div class="row">
+                                <div class="card bg-light">
+                                    <div class="col-12">
+                                        <img ng-repeat="img in images" ng-src="{{'/assets/images/' + img.picture}}" ng-click="editImages(img)" width="60" height="50">
+                                    </div>
+                                </div>
+                            </div>
+                            <br>
                         </div>
                     </div>
                 </div>
