--- a/DATN_F21/src/main/resources/templates/viewsSeller/wait.html
+++ b/DATN_F21/src/main/resources/templates/viewsSeller/wait.html
@@ -5,7 +5,15 @@
 <main>
 	<div class="xacnhan" style="text-align: center;">
 	<label class="title3" style="color: orange; margin-top: 20px; font-size: 30px">Đơn Hàng Chờ Xác Nhận</label>
-            
+            <div class="search3">
+                <div class="row">
+                    
+                            <div class="col-sm-4 btn_tim">
+                                <button class="btn btn-outline-success" style="margin-left: -30px" type="submit">Chọn tất cả</button>
+                            </div>
+                        
+            </div>
+            </div>
             <div class="bang2">
                 <table class="table tablea">
                     <thead class="thead-light">
