--- a/DATN_F21/src/main/resources/templates/LayoutUser/myAccount/_menu.html
+++ b/DATN_F21/src/main/resources/templates/LayoutUser/myAccount/_menu.html
@@ -7,7 +7,7 @@
 			<a href="/account/change_password">Đổi Mật Khẩu<i class="fas fa-user-edit"></i></a>
 			<a href="/account/order">Đơn Hàng<i class="fas fa-file-alt"></i></a>
 			<a href="/account/wallet">Ví Điện Tử<i class="fas fa-money-bill"></i></a>
-			<a href="/account/cardlink">Liên Kết Thẻ<i class="fas fa-money-bill"></i></a>			
+			<!-- <a href="/account/cardlink">Liên Kết Thẻ<i class="fas fa-money-bill"></i></a> -->			
 			<a href="/account/transaction">Lịch sử giao dịch<i class="fas fa-money-bill"></i></a>
 			<a href="/security/logoff">Đăng Xuất<i class="fas fa-sign-out-alt"></i></a>
 		</div>
