--- a/DATN_F21/src/main/resources/templates/viewsAdmin/ListUser.html
+++ b/DATN_F21/src/main/resources/templates/viewsAdmin/ListUser.html
@@ -115,13 +115,13 @@
 							<table class="table">
 								<thead>
 									<tr>
-										<th scope="col">No</th>
-										<th scope="col">UserName</th>
-										<th scope="col">Picture</th>
-										<th scope="col">FullName</th>
+										<th scope="col">STT</th>
+										<th scope="col">Tên tài khoản</th>
+										<th scope="col">Hình</th>
+										<th scope="col">Họ và tên</th>
 										<th scope="col">Email</th>
-										<th scope="col">Gender</th>
-										<th scope="col">Birthday</th>
+										<th scope="col">Giới tính</th>
+										<th scope="col">Ngày sinh</th>
 										<th scope="col"></th>
 									</tr>
 								</thead>
@@ -129,12 +129,21 @@
 									<tr ng-repeat="item in pager.items">
 										<th scope="row">{{$index + 1+no}}</th>
 										<td>{{item.username}}</td>
-										<td>{{item.picture}}</td>
+										<td><img ng-src="{{'/img/user/' + item.picture}}" class="img-thumbnail rounded-circle" alt="" width="50px" height="50px"></td>										
 										<td>{{item.fullname}}</td>
 										<td>{{item.email}}</td>
 										<td>{{item.gender?'Nam':'Nữ'}}</td>
-										<td>{{item.birthday | date:'dd-MM-yyyy'}}</td>
-										<td><a ng-click="edit(item)" href="">Edit</a></td>
+										<td>{{item.birthday | date:'dd-MM-yyyy'}}</td>										
+										<td>
+	                                        <div class="icon-sp">
+	                                            <a ng-click="edit(item)" href=""> 
+		                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+		                                    			<path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+					                                    <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />	
+					                                </svg>
+	                                            </a>
+	                                        </div>
+	                                    </td>
 									</tr>	
 								</tbody>
 							</table>
